refactor: Update component for new build tools: device-viewer (#309)

--- a/packages/components/bolt-device-viewer/src/_device-viewer.scss
+++ b/packages/components/bolt-device-viewer/src/_device-viewer.scss
@@ -1,6 +1,4 @@
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
-
+@import '@bolt/core';
 
 @import 'device-viewer--iphone8';
 @import 'device-viewer--ipad';
