refactor: Partially update icon component (#309)
To fully update this component, we need to update icons as well, which
is a dependency

--- a/packages/components/bolt-icon/src/icon.scss
+++ b/packages/components/bolt-icon/src/icon.scss
@@ -1,7 +1,6 @@
 $bolt-export-data: false;
 
-@import '@bolt/settings-all'; // Global border radius
-@import '@bolt/tools-all'; // Global border radius
+@import '@bolt/core';
 
 
 bolt-icon {
