refactor: Update component for new build tools: headline (#309)

--- a/packages/components/bolt-headline/src/all-headlines.scss
+++ b/packages/components/bolt-headline/src/all-headlines.scss
@@ -1,10 +1,6 @@
 // BOLT HEADLINE COMPONENT
 
-@import '@bolt/tools-uppercase';
-@import '@bolt/tools-font-family';
-@import '@bolt/tools-font-weight';
-@import '@bolt/tools-font-size';
-@import '@bolt/tools-spacing';
+@import '@bolt/core';
 @import './tools.headlines';
 
 
