fix: background-color, close button, and close captions

--- a/src/_patterns/02-components/bolt-background/src/background.scss
+++ b/src/_patterns/02-components/bolt-background/src/background.scss
@@ -82,7 +82,7 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
   left: 0;
 
   .is-ready & {
-    background-color: rgba(bolt-color(black), 0.6);
+    background-color: rgba(bolt-color(indigo, dark), 0.8);
     perspective: 500px;
     perspective-origin: 50% 150%;
     pointer-events: none;
