--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -47,11 +47,18 @@ bolt-video {
   .c-bolt-background__video & {
     display: block;
     position: relative;
-    width: calc(90vw - #{bolt-spacing(large)}); /* [1] */
-    height: calc((90vw * (9 / 16)) - #{bolt-spacing(large)}); /* [1] */
-    max-width: 100vh;
+    width: 90vw;
+    height: 90vw * (9 / 16);
+    max-width: 100vw;
     max-height: calc(100vh * (9 / 16));
     margin: 0 auto;
+
+    @include respond-to(small) {
+      width: calc(90vw - #{bolt-spacing(large)}); /* [1] */
+      height: calc((90vw * (9 / 16)) - #{bolt-spacing(large)}); /* [1] */
+      max-width: 100vw;
+      max-height: calc(100vh * (9 / 16));
+    }
   }
 }
 
@@ -66,6 +73,17 @@ bolt-video {
     height: 100%;
   }
 }
+
+
+// Hide close captions button
+.vjs-subs-caps-button {
+  display: none;
+}
+
+
+
+
+
 
 // .c-bolt-background-video {
 //   pointer-events: none;
