--- a/packages/global/styles/index.scss
+++ b/packages/global/styles/index.scss
@@ -3,4 +3,5 @@
 @import "03-generic/**/*.scss";
 @import "04-elements/**/*.scss";
 @import "05-objects/**/*.scss";
+@import "06-themes/themes-general/**/*.scss";
 @import "07-utilities/**/*.scss";
