--- a/packages/components/bolt-headline/src/_tools.headlines.scss
+++ b/packages/components/bolt-headline/src/_tools.headlines.scss
@@ -1,4 +1,6 @@
 // Shared base text styles used across all headline, subheadline, eyebrow and vanilla DIY text components
+@import '@bolt/core';
+
 @mixin bolt-headline() {
   @include bolt-headline-font-weight;
   @include bolt-headline-font-style;
