--- a/apps/pattern-lab--workshop/src/_patterns/02-components/button/00-button-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/button/00-button-docs.twig
@@ -1,10 +1,76 @@
-{% set schema = get_data('@bolt/button.schema.json') %}
+<section>
 
-{% set code %} {%- verbatim -%}
-{% include '@bolt/button.twig' with {
-  text: 'My button'
-} only %}
-{%- endverbatim -%} {% endset %}
+  {% set schema = get_data('@bolt/button.schema.json') %}
+  {% set themes = get_data('@bolt/themes.schema.json') %}
 
-{# @TODO: given that the current schema-docs.twig doesn't take in a `code` param, are we missing an include somewhere? #}
-{% include "@utils/schema-docs.twig" with schema only %}
+
+  {% set code %}
+    {% for style in schema.properties.style.enum %}
+      {% include "@bolt/button.twig" with {
+        "style": style,
+        "text": "Example " ~ style ~" Button"
+      } %}
+    {% endfor %}
+  {% endset %}
+
+  {#- verbatim -%}
+  {{ code | raw }}
+  {%- endverbatim -#}
+
+  <div class="u-bolt-padding-medium js-theming-example" style="border: 1px dotted">
+    {{ code | raw }}
+  </div>
+
+
+  {% set boltThemingControls = "bolt-theming-controls--" ~ random() %}
+
+  {% for color in themes.properties.colors.enum %}
+    {% set boltThemingControl = "bolt-theming-control--" ~ random() %}
+    <label for="{{ boltThemingControl }}">
+      <input id="{{ boltThemingControl }}" type="radio"  name="{{ boltThemingControls }}" {{ loop.first ? "checked" : ""}} data-theme="{{ color }}" class="js-bolt-theming-toggle">
+      <span for="{{ boltThemingControl }}" role="button">
+        {{ color }}
+      </span>
+    </label>
+  {% endfor %}
+
+
+
+  <script>
+    var themingToggle = document.querySelectorAll('.js-bolt-theming-toggle');
+    var themingContainer = document.querySelector('.js-theming-example');
+    var prefix = "t-bolt-";
+
+    var classes = themingContainer.className.split(" ").filter(function(c) {
+      return c.lastIndexOf(prefix, 0) !== 0;
+    });
+
+    themingToggle.forEach(function(element) {
+      function toggleColor(element){
+        themingContainer.className = classes.join(" ").trim();
+        themingContainer.classList.add("t-bolt-" + element.getAttribute('data-theme'));
+      }
+
+      if (element.checked){
+        toggleColor(element);
+      }
+
+      element.addEventListener('change', function(e){
+        toggleColor(e.target);
+      });
+    });
+  </script>
+
+
+
+
+
+  {# @TODO: given that the current schema-docs.twig doesn't take in a `code` param, are we missing an include somewhere? #}
+  <details>
+    <summary>Bolt Button Schema</summary>
+    <p>
+      {% include "@utils/schema-docs.twig" with schema only %}
+    </p>
+  </details>
+
+</section>
