--- a/packages/components/button/src/button.twig
+++ b/packages/components/button/src/button.twig
@@ -1,57 +1,58 @@
-{% set tags = {
-  "button": "button",
-  "a": "link"
-} %}
-
-{% set widths = ["full", "full@small"] %}
-{% set styles = ["primary", "secondary", "text"] %}
-{% set prefix = "c-bolt-" %}
-
-{% set itemAlignments = {
-  "center": "center",
-  "left": "start"
-} %}
-
-{# Allowed Button Sizes #}
-{% set sizes = [
-  "xxsmall",
-  "xsmall",
-  "small",
-  "large",
-  "xlarge"
-] %}
-
-{% set attributes = create_attribute(attributes|default({})) %}
-{% set tagAttributes = create_attribute({}) %}
+{% set schema = get_data('@bolt/button.schema.json') %}
 
 {# Defaults for a vanilla `Button` component #}
+{% set prefix = "c-bolt-" %}
 {% set componentName = "button" %}
 {% set baseClass = prefix ~ componentName %}
-{% set size = size | default("medium") %}
-{% set width = width | default("") %}
-{% set style = style | default("") %}
-{% set rounded = rounded | default(false) %}
-{% set itemAlignment = itemAlignment | default("center") %}
+{% set attributes = create_attribute(attributes|default({})) %}
 
-{% set tag = tag in tags|keys ? tag: "a" %}
+
+
+{% set alignOptions = schema.properties.align.enum %}
+{% set roundedOptions = schema.properties.rounded.enum %}
+{% set sizeOptions = schema.properties.size.enum %}
+{% set styleOptions = schema.properties.style.enum %}
+{% set tagOptions = schema.properties.tag.enum %}
+{% set widthOptions = schema.properties.width.enum %}
+
+
+{% set align = align in alignOptions ? align : schema.properties.align.default %}
+{% set rounded = rounded in roundedOptions ? rounded : schema.properties.rounded.default %}
+{% set size = size in sizeOptions ? size : schema.properties.size.default %}
+{% set style = style in styleOptions ? style : schema.properties.style.default %}
+{% set tag = tag in tagOptions ? tag : schema.properties.tag.default %}
+{% set width = width in widthOptions ? width : schema.properties.width.default %}
+
+
+{% if tag == "submit" %}
+  {% set tag = "button" %}
+  {% set attributes = attributes.setAttribute("type", "submit") %}
+{% elseif tag == "link" %}
+  {% set tag = "a" %}
+  {% if url %}
+    {% set attributes = attributes.setAttribute("href", url) %}
+  {% endif %}
+{% elseif tag == "reset" %}
+  {% set tag = "button" %}
+  {% set attributes = attributes.setAttribute("type", "reset") %}
+{% endif %}
+
 
 
 {% set classes = [
   baseClass,
   disabled ? baseClass ~ "--disabled" : "",
-  size in sizes ? baseClass ~ "--" ~ size : "",
-  width in widths ? baseClass ~ "--" ~ width : "",
-  style in styles ? baseClass ~ "--" ~ style : baseClass ~ "--primary",
-  itemAlignment in itemAlignments|keys ? baseClass ~ "--item-align-" ~ itemAlignments[itemAlignment]
+  size in sizeOptions ? baseClass ~ "--" ~ size : "",
+  width in widthOptions ? baseClass ~ "--" ~ width : "",
+  rounded in roundedOptions and rounded != schema.properties.rounded.default ? baseClass ~ "--" ~ rounded : "",
+  style in styleOptions ? baseClass ~ "--" ~ style : "",
+  align in alignOptions ? baseClass ~ "--" ~ align : "",
 ] %}
 
-{% set tagClasses = [
-  tag in tags|keys ? baseClass ~ "__" ~ tags[tag]
-] %}
-{% set tagAttributes = tagAttributes.addClass(tagClasses) %}
-{% if url %}
-  {% set tagAttributes = tagAttributes.setAttribute("href", url) %}
-{% endif %}
+  {# tag in tagOptions ? baseClass ~ "--" ~ tag : "", #}
+
+
+
 
 
 {% if disabled %}
@@ -62,21 +63,27 @@
 {# set iconpos = iconpos | default("right") #}
 
 <bolt-button
-  size="{{ size in sizes ? size : 'medium' }}"
-  style="{{ style in styles ? style : 'primary' }}"
-  {% if rounded %}rounded="true"{% endif %}
-  {% if iconOnly %}icon-only="true"{% endif %}
+  {% if align %} align="{{ align }}" {% endif %}
+  {% if style %} color="{{ style }}" {% endif %}
+  {% if size %} size="{{ size }}" {% endif %}
+  {% if width %} width="{{ width }}" {% endif %}
+  {% if rounded %} rounded=" {{ rounded }}" {% endif %}
+  {% if iconOnly %} icon-only="true" {% endif %}
+  {% if disabled %} {{ disabled }} {% endif %}
+
   {{ attributes }}
 >
-  <div {{ attributes.addClass(classes) }}>
-    <{{ tag }} {{ tagAttributes }}>
-      <span class="{{ "#{baseClass}__item #{baseClass}__item-text" }} {% if iconOnly %}u-bolt-visuallyhidden{% endif %}">{{ text }}</span>
+  <{{ tag }} {{ attributes.addClass(classes).addClass('js-bolt-pre-rendered') }}>
+    {{ text }}
+    {# <span class="{{ "#{baseClass}__text" }} {% if iconOnly %}u-bolt-visuallyhidden{% endif %}">
 
-      {% if icon %}
-        <span class="{{ "#{baseClass}__icon" }} {% if iconOnly %}u-bolt-margin-left-none {% endif %}">
-          {% include "@bolt/icon.twig" with icon only %}
-        </span>
-      {% endif %}
-    </{{ tag }}>
-  </div>
+    </span> #}
+
+
+    {% if icon %}
+      <span class="{{ "#{baseClass}__icon" }} {% if iconOnly %}u-bolt-margin-left-none {% endif %}">
+        {% include "@bolt/icon.twig" with icon only %}
+      </span>
+    {% endif %}
+  </{{ tag }}>
 </bolt-button>
