fix: vertical alignment of items

--- a/src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.scss
+++ b/src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.scss
@@ -9,9 +9,9 @@ $bolt-flag-sizes: (
 );
 
 $bolt-flag-alignments: (
-  'top': 'flex-start',
-  'middle': 'center',
-  'bottom': 'flex-end'
+  'top': flex-start,
+  'middle': center,
+  'bottom': flex-end
 );
 
 
@@ -83,35 +83,35 @@ $bolt-flag-alignments: (
 
 
 
-// 
-// 
+//
+//
 // // Flexbox adjustments
 // @supports (display: flex) {
 //   .o-flag {
 //     display: flex;
 //     align-items: flex-start;
-// 
+//
 //     &--center {
 //       align-items: center;
 //     }
-// 
+//
 //     &--bottom {
 //       align-items: flex-end;
 //     }
-//     
+//
 //     &--rev .o-bolt-flag__image {
 //       order: 1;
 //       padding-left: $spacing-unit;
 //       padding-right: $spacing-unit;
 //     }
 //   }
-// 
-// 
+//
+//
 //   .o-bolt-flag__image,
 //   .o-bolt-flag__body {
 //       display: initial;
 //   }
-// 
+//
 //   .o-bolt-flag__body {
 //     // min-width: 0;
 //     // flex: 1 1 auto;
