QA Fix: video player width and close button bug (#365)
* fix: video player width and close button bug

* fix: remove redundant code

--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -49,15 +49,13 @@ bolt-video {
     position: relative;
     width: 90vw;
     height: 90vw * (9 / 16);
-    max-width: 100vw;
-    max-height: calc(100vh * (9 / 16));
+    max-width: 100vh;
+    max-height: 100vh * (9 / 16);
     margin: 0 auto;
 
     @include respond-to(small) {
       width: calc(90vw - #{bolt-spacing(large)}); /* [1] */
       height: calc((90vw * (9 / 16)) - #{bolt-spacing(large)}); /* [1] */
-      max-width: 100vw;
-      max-height: calc(100vh * (9 / 16));
     }
   }
 }
