WIP: latest work on forms (BK-10)

--- a/src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-radio.twig
+++ b/src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-radio.twig
@@ -5,7 +5,7 @@
     "title": labelTitle,
     "displayType": "inline",
     "attributes": {
-      "for": element_id
+      "for": elementId
     }
   } %}
 {% endset %}
