--- a/src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-select.twig
+++ b/src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-select.twig
@@ -11,7 +11,7 @@
 
 {% set children %}
   {% include("@bolt/form-select.twig") with {
-    "attributes": select_attributes,
+    "attributes": selectAttributes,
     "options": options
   } %}
 {% endset %}
