--- a/src/_patterns/02-components/bolt-forms/src/elements/form-label.twig
+++ b/src/_patterns/02-components/bolt-forms/src/elements/form-label.twig
@@ -20,7 +20,7 @@
 {% if displayType == "inline" %}
   {% set _classes = [
     "c-bolt-inline-label",
-    "c-bolt-inline-label--" ~ inputElementType
+    inputElementType ? "c-bolt-inline-label--" ~ inputElementType : "",
   ] %}
 {% elseif displayType == "floating" %}
   {% set _classes = ["c-bolt-floating-label"] %}
