--- a/src/_patterns/02-components/bolt-forms/src/forms.scss
+++ b/src/_patterns/02-components/bolt-forms/src/forms.scss
@@ -1,5 +1,5 @@
 /* ------------------------------------ *\
-   Form Sandbox
+   Forms
 \* ------------------------------------ */
 
 @import '@bolt/tools-all';
