--- a/src/_patterns/02-components/bolt-forms/demo/forms/form-demo-campaign-landing.twig
+++ b/src/_patterns/02-components/bolt-forms/demo/forms/form-demo-campaign-landing.twig
@@ -1,14 +1,11 @@
 {% extends "@bolt/form.twig" %}
 
-{% set attributes = {
-  "class": ["t-bolt-xlight"]
-} %}
-
 {% set children %}
   {% include "@bolt/form-element-demo-input-element.twig" with {
     "title": "First Name",
     "inputAttributes": {
-      "placeholder": "Enter your first name"
+      "placeholder": "Enter your first name",
+      "required": true
     },
     "labelDisplayType": "floating"
   } only %}
@@ -16,7 +13,8 @@
   {% include "@bolt/form-element-demo-input-element.twig" with {
     "title": "Last Name",
     "inputAttributes": {
-      "placeholder": "Enter your last name"
+      "placeholder": "Enter your last name",
+      "required": true
     },
     "labelDisplayType": "floating"
   } only %}
@@ -25,7 +23,8 @@
     "title": "Email Address",
     "inputAttributes": {
       "placeholder": "Enter your email address",
-      "type": "email"
+      "type": "email",
+      "required": true
     },
     "labelDisplayType": "floating"
   } only %}
@@ -33,7 +32,8 @@
   {% include "@bolt/form-element-demo-input-element.twig" with {
     "title": "Title",
     "inputAttributes": {
-      "placeholder": "Enter your current job title"
+      "placeholder": "Enter your current job title",
+      "required": true
     },
     "labelDisplayType": "floating"
   } only %}
@@ -41,13 +41,17 @@
   {% include "@bolt/form-element-demo-input-element.twig" with {
     "title": "Company Name",
     "inputAttributes": {
-      "placeholder": "Enter the name of your company"
+      "placeholder": "Enter the name of your company",
+      "required": true
     },
     "labelDisplayType": "floating"
   } only %}
 
   {% include "@bolt/form-element-demo-select.twig" with {
     "title": "Country",
+    "selectAttributes": {
+      "required": true
+    },
     "options": [
       {
         "type": "option",
@@ -82,6 +86,24 @@
     "attributes": {
       "type": "submit",
       "value": "Download Now"
+    }
+  } only %}
+
+  {% include "@bolt/button.twig" with {
+    "text": "Download Now",
+    "width": "full",
+    "tag": "button",
+    "icon": {
+      "name": "download"
+    }
+  } only %}
+
+  {% include "@bolt/form-button.twig" with {
+    "text": "Download Now",
+    "width": "full",
+    "tag": "button",
+    "icon": {
+      "name": "download"
     }
   } only %}
 
