--- a/src/_patterns/04-pages/d8-press/d8-press-details.twig
+++ b/src/_patterns/04-pages/d8-press/d8-press-details.twig
@@ -15,98 +15,269 @@
         "text": "Press Release"
       } only %}
       {% include "@bolt/headline.twig" with {
-        "text": feature_band.title | default("Pega Receives Highest Scores in Two Use Cases in Gartner’s Critical Capabilities for the CRM Customer Engagement Center"),
+        "text": "Despite Fears, Executives Believe AI and Robotics Could Change Workplace for the Better, Says Pega Research",
         "size": "xxxlarge"
+      } only %}
+      {% include "@bolt/subheadline.twig" with {
+        "text": "Study finds teaming machine intelligence with humans can help organizations embrace a new era of efficient and meritocratic workforces",
+        "size": "xxlarge"
       } only %}
 
       {% grid %}
         {% cell 'u-bolt-width-1/1 u-bolt-width-8/12@medium' %}
           {% include "@bolt/text.twig" with {
-            "text": "CAMBRIDGE, Mass. – December 26, 2017 – Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises, today announced it received the highest scores in the business-to-business and complex processes use cases in Gartner’s December 2017 Critical Capabilities for the CRM Customer Engagement Center (1)."
+            "text": "CAMBRIDGE, Mass. – January 22, 2018 – Organizations believe that pairing humans alongside machine intelligence will create a more effective, engaged, and meritocratic workforce, according to a new global study released by Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises. Pega surveyed 845 senior executives working globally across key industry sectors, including financial services, insurance, manufacturing, retail, telecommunications and media, and government, on the increased role artificial intelligence (AI) and robotic automation will play in the workplace of the future."
           } only %}
           {% include "@bolt/text.twig" with {
-            "text": "Gartner evaluated 15 leading CRM vendors as part of the Critical Capabilities report – a companion report to the Gartner Magic Quadrant for the CRM Customer Engagement Center (2) in which Pega was named a Leader for the eighth consecutive year. In the Critical Capabilities report, vendors’ products and services were evaluated across the following capabilities and weightings: case management, digital engagement channels, integration, mobile support, predictive customer analytics, real-time guidance/decision support, self-service/knowledge management, and social media engagement management."
+            "text": "The survey uncovered widespread belief that machine intelligence will work ubiquitously alongside humans over time – so much so that seven out of 10 respondents (69 percent) believe the term ‘workforce’ will evolve to encapsulate both humans and machine intelligence. They also expect AI-augmented employees to generate tangible business returns such as more efficiency (73 percent agree) and better customer service (62 percent). But the effects may extend even deeper as AI transforms the way people work, are managed, and rewarded."
+          } only %}
+          {% include "@bolt/headline.twig" with {
+            "text": "Empowering employees with more autonomy",
+            "size": "xlarge"
           } only %}
           {% include "@bolt/text.twig" with {
-            "text": "Pega’s end-to-end suite of customer engagement applications for marketing, sales, and customer service are powered by Pega® Customer Decision Hub, its market-leading, real-time artificial intelligence (AI) engine. Built on Pega® Platform, Pega’s CRM solutions enable clients to constantly anticipate customers’ changing needs and provide personalized AI-driven recommendations throughout the customer journey. By engaging customers with meaningful interactions, Pega clients boost customer satisfaction while increasing customer lifetime value."
+            "text": "By augmenting their work with machine intelligence, human employees will be empowered with more autonomy and a greater sense of job satisfaction, according to the survey:"
           } only %}
-          {% include "@bolt/text.twig" with {
-            "text": "Pega believes this recognition in the Critical Capabilities report builds on other recent recognition of Pega’s customer engagement capabilities. Pega was named a leader in The Forrester Wave™: Real-Time Interaction Management, Q2 2017 (3), The Forrester Wave™: CRM Suites For Enterprise Organizations, Q4 2016 (4), and the Ovum Decision Matrix: Selecting a Customer Relationship Management Solution, 2016-17 (5)."
-          } only %}
-          {% include "@bolt/blockquote.twig" with {
-            "content": "<p>Pega supports organizations as they progress along their digital transformation journeys, with advanced, AI-powered customer engagement and digital process automation tools to seamlessly meet customers’ needs on any channel, at any time. We believe this latest recognition from Gartner further reinforces Pega as a leader in empowering end-to-end engagement to help companies improve customer satisfaction, revenue, and retention.</p>"
-          } only %}
-        {% endcell %}
-        {% cell 'u-bolt-width-1/1 u-bolt-width-4/12@medium' %}
-          {% include "@bolt/card.twig" with {
-            "theme": "xlight",
-            "contentItems": [
+          {% include "@bolt/unordered-list.twig" with {
+            "contentItems" : [
               {
-                "pattern": "image",
-                "src": "/images/placeholders/1200x660.jpg"
+                "text": "AI and robotic automation will allow staff to make more informed decisions and lead to a flattening of traditional management hierarchies, according 8 out of 10 respondents (78 percent)."
               },
               {
-                "pattern": "headline",
-                "tag": "h3",
-                "size": "large",
-                "text": "Pega Press Kit"
+                "text": "AI will help suggest next best actions for most customer service agents within the next five years, according to more than three quarters (77 percent) of respondents."
               },
               {
-                "pattern": "text",
-                "text": "Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula sed."
-              },
-              {
-                "pattern": "button",
-                "text": "Download"
+                "text": "While 88 percent are comfortable working together with machines, they are less enthusiastic about being managed by them: four out of five (79 percent) say they would not be comfortable with an AI-powered boss."
               }
             ]
           } only %}
+          {% include "@bolt/headline.twig" with {
+            "text": "Establishing a more transparent, meritocratic workplace",
+            "size": "xlarge"
+          } only %}
+          {% include "@bolt/text.twig" with {
+            "text": "As organizations increasingly come under scrutiny on equal pay for equal work issues, the study found the use of unbiased machine intelligence to analyze employee effectiveness could be the key to leveling the playing field:"
+          } only %}
+          {% include "@bolt/unordered-list.twig" with {
+            "contentItems" : [
+              {
+                "text": "Two thirds (66 percent) believe the widespread use of AI will give rise to a more transparent meritocracy in the workplace."
+              },
+              {
+                "text": "Almost three quarters (74 percent) think that within 10 years, AI will become standard practice for evaluating employee performance, while 72 percent predict it will be commonly used to set appropriate rewards and compensation."
+              },
+              {
+                "text": "Eighty-four percent agree it will be commonplace for AI to calculate the true value added by each worker within a decade, while 44 percent see this happening within five years."
+              }
+            ]
+          } only %}
+          {% include "@bolt/headline.twig" with {
+            "text": "Leveraging machine intelligence to manage the gig economy",
+            "size": "xlarge"
+          } only %}
+          {% include "@bolt/text.twig" with {
+            "text": "Respondents expect the number of permanent employees at Fortune 500 companies to be cut in half by 2030. But while this shift to the so-called gig economy brings new flexibility to employers to hire on demand, it also opens new challenges:"
+          } only %}
+          {% include "@bolt/unordered-list.twig" with {
+            "contentItems" : [
+              {
+                "text": "Eighty-five percent expect the use of more flexible, freelance customer service staff will make it easier to provide customers with 24/7 service, while 82 percent forecast faster response times as a direct result."
+              },
+              {
+                "text": "Conversely, 81 percent believe this shift toward temporary staff will make it harder to cultivate an ongoing culture of customer centricity."
+              },
+              {
+                "text": "The gig economy makes it more important to pair humans with AI to ensure consistent quality service. For example, nine out of 10 will use analytics to ensure customers receive the same level of personalization from one worker to another."
+              }
+            ]
+          } only %}
+          {% include "@bolt/text.twig" with {
+            "text": "To see the complete data from the study, download “The Future of Work” report at: www.pega.com/marketforce-future-of-work."
+          } only %}
+          {% include "@bolt/headline.twig" with {
+            "text": "Quotes & Commentary",
+            "size": "xlarge"
+          } only %}
+          {% include "@bolt/text.twig" with {
+            "text": "“AI and automation technologies have generated tremendous hype, but the potential within the enterprise remains largely untapped,“ said Don Schuerman, chief technology officer and vice president, product marketing, Pegasystems. “Organizations must augment their human intelligence with AI across the entire organization in order to move beyond basic efficiency improvements. By deploying AI and automation with an end-to-end view in mind, businesses can move closer to fulfilling their customer centric vision.”"
+          } only %}
+        {% endcell %}
+        {% cell 'u-bolt-width-1/1 u-bolt-width-4/12@medium' %}
+          {% grid "o-bolt-grid--flex o-bolt-grid--matrix" %}
+            {% cell "u-bolt-width-1/1" %}
+              <div class="c-bolt-card">
+                <div class="c-bolt-card__body">
+                  {% include "@bolt/headline.twig" with {
+                    "text": "Press Kit",
+                    "size": "xlarge"
+                  } only %}
+                  {% include "@bolt/ui-list.twig" with {
+                    "size": "xsmall",
+                    "contentItems": [
+                      {
+                        "contentItems": [
+                          {
+                            "pattern": "headline",
+                            "text": "Corporate Fact Sheet",
+                            "size": "small",
+                            "url": "https://www.pega.com",
+                            "icon": {
+                              "name": "chevron-right"
+                            }
+                          }
+                        ]
+                      },
+                      {
+                        "contentItems": [
+                          {
+                            "pattern": "headline",
+                            "text": "Management Team",
+                            "size": "small",
+                            "url": "https://www.pega.com",
+                            "icon": {
+                              "name": "chevron-right"
+                            }
+                          }
+                        ]
+                      },
+                      {
+                        "contentItems": [
+                          {
+                            "pattern": "headline",
+                            "text": "YouTube Channel",
+                            "size": "small",
+                            "url": "https://www.pega.com",
+                            "icon": {
+                              "name": "chevron-right"
+                            }
+                          }
+                        ]
+                      },
+                      {
+                        "contentItems": [
+                          {
+                            "pattern": "headline",
+                            "text": "Analyst Coverage",
+                            "size": "small",
+                            "url": "https://www.pega.com",
+                            "icon": {
+                              "name": "chevron-right"
+                            }
+                          }
+                        ]
+                      }
+                    ]
+                  } only %}
+                </div>
+              </div>
+            {% endcell %}
+            {% cell "u-bolt-width-1/1" %}
+              {% include "@bolt/headline.twig" with {
+                "text": "Media Contacts",
+                "size": "xlarge"
+              } only %}
+              <p class="c-bolt-text">
+                Lisa Pintchman Rogers
+                <br>
+                VP, Corporate Communications
+                <br>
+                <a href="mailto:Lisa.Pintchman@pega.com">Lisa.Pintchman@pega.com</a>
+                <br>
+                +1 617-866-6022
+              </p>
+              {% include "@bolt/headline.twig" with {
+                "text": "North America",
+                "size": "large"
+              } only %}
+              <p class="c-bolt-text">
+                Sean Audet
+                <br>
+                Director, Corporate Communications
+                <br>
+                <a href="mailto:Sean.Audet@pega.com">Sean.Audet@pega.com</a>
+                <br>
+                +1 617-528-5230
+              </p>
+              <p class="c-bolt-text">
+                Ilena Ryan
+                <br>
+                Sr. Manager, Public Relations
+                <br>
+                <a href="mailto:Ilena.Ryan@pega.com">Ilena.Ryan@pega.com</a>
+                <br>
+                +1 617-866-6722
+              </p>
+              {% include "@bolt/headline.twig" with {
+                "text": "Europe",
+                "size": "large"
+              } only %}
+              <p class="c-bolt-text">
+                Joanna Richardson
+                <br>
+                Director, Corporate Communications
+                <br>
+                <a href="mailto:Joanna.Richardson@pega.com">Joanna.Richardson@pega.com</a>
+                <br>
+                +44 (0) 118 9651 660
+              </p>
+              <p class="c-bolt-text">
+                Jon Brigden
+                <br>
+                PR &amp; Communications Manager
+                <br>
+                <a href="mailto:Jon.Brigden@pega.com">Jon.Brigden@pega.com</a>
+                <br>
+                +44 (0) 118 9398 584
+              </p>
+            {% endcell %}
+          {% endgrid %}
+        {% endcell %}
+        {% cell 'u-bolt-width-1/1' %}
           <hr>
           {% include "@bolt/headline.twig" with {
-            "text": feature_band.title | default("Media Contacts"),
+            "text": "Category:",
+            "size": "small",
+            "transform": "uppercase"
+          } only %}
+          {% include "@bolt/chip-list.twig" with {
+            "contentItems": [
+              {
+                "text": "First tag",
+                "url": "http://pega.com"
+              },
+              {
+                "text": "Sales Automation and Stuff",
+                "url": "http://pega.com"
+              },
+              {
+                "text": "CRM",
+                "url": "http://pega.com"
+              },
+              {
+                "text": "White Paper",
+                "url": "http://pega.com"
+              },
+              {
+                "text": "Pega.com",
+                "url": "http://pega.com"
+              }
+            ]
+          } %}
+          {% include "@bolt/headline.twig" with {
+            "text": "About Pegasystems",
             "size": "xlarge"
           } only %}
           <p class="c-bolt-text">
-            Lisa Pintchman Rogers
-            <br>
-            VP, Corporate Communications
-            <br>
-            <a href="mailto:Lisa.Pintchman@pega.com">Lisa.Pintchman@pega.com</a>
-            <br>
-            +1 617-866-6022
+            Pegasystems Inc. is the leader in software for customer engagement and operational excellence. Pega’s adaptive, cloud-architected software – built on its unified Pega® Platform – empowers people to rapidly deploy, and easily extend and change applications to meet strategic business needs. Over its 30-year history, Pega has delivered award-winning capabilities in CRM and BPM, powered by advanced artificial intelligence and robotic automation, to help the world’s leading brands achieve breakthrough business results. For more information on Pegasystems (NASDAQ: PEGA) visit www.pega.com.
+          </p>
+          <p class="c-bolt-text c-bolt-text--xsmall">
+            All trademarks are the property of their respective owners.
+          </p>
+          <p class="c-bolt-text c-bolt-text--xsmall">
+            The information contained in this press release is not a commitment, promise, or legal obligation to deliver any material, code or functionality. The development, release and timing of any features or functionality described remains at the sole discretion of Pegasystems, Pegasystems specifically disclaims any liability with respect to this information.
           </p>
         {% endcell %}
       {% endgrid %}
-      <hr>
-      {% include "@bolt/headline.twig" with {
-        "text": "Category:",
-        "size": "small",
-        "transform": "uppercase"
-      } only %}
-      {% include "@bolt/chip-list.twig" with {
-        "contentItems": [
-          {
-            "text": "First tag",
-            "url": "http://pega.com"
-          },
-          {
-            "text": "Sales Automation and Stuff",
-            "url": "http://pega.com"
-          },
-          {
-            "text": "CRM",
-            "url": "http://pega.com"
-          },
-          {
-            "text": "White Paper",
-            "url": "http://pega.com"
-          },
-          {
-            "text": "Pega.com",
-            "url": "http://pega.com"
-          }
-        ]
-      } %}
     {% endblock %}
   {% endembed %}
 
