Adding Bolt Band to PL. Fixing Sass.

--- a/packages/components/bolt-band/src/band.scss
+++ b/packages/components/bolt-band/src/band.scss
@@ -1,8 +1,7 @@
 /**
   * @define c-bolt-band
   */
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
+@import '@bolt/core';
 
 @mixin bolt-full-bleed() {
   position: relative;
@@ -59,3 +58,4 @@ bolt-band {
     height: 56.25vw;
   }
 }
+
