--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -64,6 +64,8 @@
 <bolt-button
   size="{{ size in sizes ? size : 'medium' }}"
   color="{{ style in styles ? style : 'primary' }}"
+    {% if width %} width="{{ width }}" {% endif %}
+    {% if itemAlignment %} align="{{ itemAlignment }}" {% endif %}
   {% if rounded %}rounded="true"{% endif %}
   {% if iconOnly %}icon-only="true"{% endif %}
   {{ attributes }}
