--- a/src/_patterns/02-components/bolt-forms/demo/forms/form-demo-campaign-landing.twig
+++ b/src/_patterns/02-components/bolt-forms/demo/forms/form-demo-campaign-landing.twig
@@ -82,25 +82,10 @@
     "labelDisplayType": "inline"
   } only %}
 
-  {% include "@bolt/form-input.twig" with {
-    "attributes": {
-      "type": "submit",
-      "value": "Download Now"
-    }
-  } only %}
-
   {% include "@bolt/button.twig" with {
     "text": "Download Now",
     "width": "full",
-    "tag": "button",
-    "icon": {
-      "name": "download"
-    }
-  } only %}
-
-  {% include "@bolt/form-button.twig" with {
-    "text": "Download Now",
-    "width": "full",
+    "itemAlignment": "center",
     "tag": "button",
     "icon": {
       "name": "download"
