Removing need for Bolt Paragraph as it was simply a <p>

--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/10-homepage/01-homepage-w-background-video.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/10-homepage/01-homepage-w-background-video.twig
@@ -329,9 +329,7 @@
                 tag: "h3"
               } only %}
 
-              {% include "@bolt/paragraph.twig" with {
-                text: "Considering Salesforce.com? Don’t fall for the hype. See why today’s leading enterprises choose Pega CRM."
-              } only %}
+              <p>Considering Salesforce.com? Don’t fall for the hype. See why today’s leading enterprises choose Pega CRM.</p>
 
               {% include "@bolt/button.twig" with {
                 text: "Get Real",
