--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
@@ -366,9 +366,7 @@
                 ]
               } only %}
 
-              {% include "@bolt/paragraph.twig" with {
-                text: "Considering Salesforce.com? Don’t fall for the hype. See why today’s leading enterprises choose Pega CRM."
-              } only %}
+              <p>Considering Salesforce.com? Don’t fall for the hype. See why today’s leading enterprises choose Pega CRM.</p>
 
               {% include "@bolt/button-group.twig" with {
                 "buttons": [
